update dom with selected belt colour

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div> 
         </div>
         <div class="col-6 text-center">
-            <h1> Negative Ninjas </h1>
+            <h1><span class="cy">Ninjas Negyddol</span><span class="en">Negative Ninjas</span></h1>
         </div>
         <div class="col-3">
             <button type="button" class="btn btn-primary float-end" id="switch-lang"><i class="fas fa-language"></i></button>
@@ -78,6 +78,11 @@
     </div>
 </div>
 <div class="game-area text-center p-5">
+    <div class="game-header row">
+        <div class="col-4"></div>
+        <div class="col-4"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
+        <div class="col-4"></div>
+    </div>
     <div class="question-area col-6"></div>
         <div id="correct"></div><div id="incorrect"></div>
         <span id="operand1">0</span>
