generate next question after checking answer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
 <div class="game-area text-center p-5">
     <div class="game-header row">
         <div class="col-4">Correct: <span id="correct">0</span></div>
-        <div class="col-4"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
+        <div class="col-3">
+            <div class="row">
+                <div class="col"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt"><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
+            </div>
+            <div class="row">
+                <span id="belt-number">BLANK</span>
+            </div>
+        </div>
         <div class="col-4">Incorrect: <span id="incorrect">0</span></div>
     </div>
     <div class="question-area col-6"></div>
