--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <title>Negative Ninjas</title>
     </head>
 <body>
-<div class="game-intro">
     <div class="header row">
         <div class="col-3">
             <!-- Help Modal -->
@@ -31,8 +30,8 @@
                         </div>
                         <div class="modal-body">
                             <p>How quickly can you defeat the baddy and progress to the next belt.</p>
-                            <p>Correct answers: +2 (Knocks 2 health points off the baddy)
-                            <br>Incorrect answers: -1 (Knocks 1 health point off ninja)</p>
+                            <p>Correct answers knock 1 health point off the baddy
+                            <br>Incorrect answers knocks 1 health point off ninja</p>
                             <p>
                             <ul>
                                 <li>White: x2, x10</li>
@@ -60,35 +59,36 @@
             <button type="button" class="btn btn-primary float-end" id="switch-lang"><i class="fas fa-language"></i></button>
         </div>
     </div>
-    <div class="row">
-        <h2 class="text-center"><span class="cy">Lefel/Belt</span><span class="en">Level/Belt</span></h2>
-    </div>
-    <div class="game-settings row">
-        <div class="btn-group col-10 mx-auto" role="group" aria-label="Basic radio toggle button group">
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="0"><span class="cy">Gwyn</span><span class="en">White</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="1"><span class="cy">Melyn</span><span class="en">Yellow</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="2"><span class="cy">Oren</span><span class="en">Orange</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="3"><span class="cy">Gwyrdd</span><span class="en">Green</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="4"><span class="cy">Piws</span><span class="en">Purple</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="5"><span class="cy">Glas</span><span class="en">Blue</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="6"><span class="cy">Brown</span><span class="en">Brown</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="7"><span class="cy">Coch</span><span class="en">Red</span></button>
-            <button type="button" class="btn btn-outline-primary btn-start" data-value="8"><span class="cy">Du</span><span class="en">Black</span></button>
+    <div class="game-intro">
+        <div class="row">
+            <h2 class="text-center"><span class="cy">Lefel/Belt</span><span class="en">Level/Belt</span></h2>
         </div>
-    </div>
+        <div class="game-settings row">
+            <div class="btn-group col-10 mx-auto" role="group" aria-label="Basic radio toggle button group">
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="0"><span class="cy">Gwyn</span><span class="en">White</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="1"><span class="cy">Melyn</span><span class="en">Yellow</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="2"><span class="cy">Oren</span><span class="en">Orange</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="3"><span class="cy">Gwyrdd</span><span class="en">Green</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="4"><span class="cy">Piws</span><span class="en">Purple</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="5"><span class="cy">Glas</span><span class="en">Blue</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="6"><span class="cy">Brown</span><span class="en">Brown</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="7"><span class="cy">Coch</span><span class="en">Red</span></button>
+                <button type="button" class="btn btn-outline-primary btn-start" data-value="8"><span class="cy">Du</span><span class="en">Black</span></button>
+            </div>
+        </div>
 </div>
 <div class="game-area text-center p-5">
     <div class="game-header row">
-        <div class="col-4">Correct: <span id="correct">0</span></div>
-        <div class="col-3">
+        <div class="col-2"><span class="cy">Cywir</span><span class="en">Correct</span>: <span id="correct">0</span></div>
+        <div class="col-8">
             <div class="row">
-                <div class="col"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt"><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
+                <div class="col"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
             </div>
             <div class="row">
                 <span id="belt-number">BLANK</span>
             </div>
         </div>
-        <div class="col-4">Incorrect: <span id="incorrect">0</span></div>
+        <div class="col-2"><span class="cy">Anghywir</span><span class="en">Incorrect</span>: <span id="incorrect">0</span></div>
     </div>
     <div class="question-area col-6"></div>
         <div id="correct"></div><div id="incorrect"></div>
@@ -99,7 +99,7 @@
         <input id="answer-box" type="number">
         <button id="btn-submit" class="btn btn-primary mx-auto"><span class="cy">Danfon</span><span class="en">Submit</span></button>
     </div>
-    <div class="fight-scene row">
+    <div class="fight-scene row p-5">
         <div class="ninja col-2">
             <div class="row progress">
                 <div id="ninja-progress" class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
