--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Negative Ninjas</title>
     </head>
 <body>
-    <div class="header row">
+    <div class="header row p-3">
         <div class="col-3">
             <!-- Help Modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#helpModal">
@@ -77,7 +77,7 @@
             </div>
         </div>
 </div>
-<div class="game-area text-center p-5">
+<div id="game-are "class="text-center p-5">
     <div class="game-header row">
         <div class="col-2"><span class="cy">Cywir</span><span class="en">Correct</span>: <span id="correct">0</span></div>
         <div class="col-8">
@@ -108,7 +108,9 @@
                 <img id="ninja-img" src="assets/images/ninja.png">
             </div>
         </div>
-        <div class="ninja-star col-8"></div>
+        <div class="col-8 fight-container my-auto">
+            <img id="ninja-star" src="assets/images/ninja-star.png">
+        </div>
         <div class="baddy col-2">
             <div class="row progress">
                 <div id="baddy-progress" class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
