--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div id="ninja-progress" class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="row">
-                <img id="ninja-img" src="assets/images/ninja.png">
+                <img id="ninja-img" src="assets/images/ninja0.png">
             </div>
         </div>
         <div class="col-8 fight-container my-auto">
