--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="fight-scene row p-5">
         <div class="ninja col-2">
             <div class="row progress">
-                <div id="ninja-progress" class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="row">
                 <img id="ninja-img" src="assets/images/ninja0.png">
@@ -113,7 +113,7 @@
         </div>
         <div class="baddy col-2">
             <div class="row progress">
-                <div id="baddy-progress" class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div id="baddy-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="row">
                 <img id="baddy-img" src="assets/images/baddy.jpg">
