--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </div>
         </div>
 </div>
-<div id="game-are "class="text-center p-5">
-    <div class="game-header row">
+<div class="game-area text-center p-5">
+    <div class="game-area game-header row">
         <div class="col-2"><span class="cy">Cywir</span><span class="en">Correct</span>: <span id="correct">0</span></div>
         <div class="col-8">
             <div class="row">
@@ -99,7 +99,7 @@
         <input id="answer-box" type="number">
         <button id="btn-submit" class="btn btn-primary mx-auto"><span class="cy">Danfon</span><span class="en">Submit</span></button>
     </div>
-    <div class="fight-scene row p-5">
+    <div class="game-area fight-scene row p-5">
         <div class="ninja col-2">
             <div class="row progress">
                 <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
