add division symbol

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="game-area text-center p-5">
         <div class="game-area game-header row">
-            <div class="col-2"><span class="cy">Cywir</span><span class="en">Correct</span>: <span id="correct">0</span></div>
+            <div class="col-2 correct-container"><i class="fas fa-check"></i> <span id="correct">0</span></div>
             <div class="col-8">
                 <div class="row">
                     <div class="col"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
@@ -90,7 +90,7 @@
                     <span id="belt-number">BLANK</span>
                 </div>
             </div>
-            <div class="col-2"><span class="cy">Anghywir</span><span class="en">Incorrect</span>: <span id="incorrect">0</span></div>
+            <div class="col-2 incorrect-container"><i class="fas fa-times"></i> <span id="incorrect">0</span></div>
         </div>
         <div class="question-area col-6"></div>
             <div id="correct"></div><div id="incorrect"></div>
