create global variable for belt number for moving to next level. Also make alert for end game

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <button id="btn-submit" class="btn btn-primary mx-auto"><span class="cy">Danfon</span><span class="en">Submit</span></button>
         </div>
         <div class="game-area fight-scene row p-5">
-            <div class="ninja col-2">
+            <div class="ninja col-md-3 col-5">
                 <div class="row progress">
                     <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -110,10 +110,10 @@
                     <img id="ninja-img" src="assets/images/ninja0.png">
                 </div>
             </div>
-            <div class="col-8 fight-container my-auto">
+            <div class="col-md-6 col-2 fight-container my-auto">
                 <img id="ninja-star" src="assets/images/ninja-star.png">
             </div>
-            <div class="baddy col-2">
+            <div class="baddy col-md-3 col-5">
                 <div class="row progress">
                     <div id="baddy-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
