--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>How quickly can you defeat the baddy and progress to the next belt.</p>
-                                <p>Correct answers knock 1 health point off the baddy
+                                <p>How quickly can you defeat the dragon and progress to the next belt.</p>
+                                <p>Correct answers knock 1 health point off the dragon
                                 <br>Incorrect answers knocks 1 health point off ninja</p>
                                 <p>
                                 <ul>
@@ -47,7 +47,7 @@
                                     <li>Black: x/ ALL</li>
                                 </ul>
                                 
-                                Once you've reached black belt, how <strong>quickly</strong> can you defeat the baddy?
+                                Once you've reached black belt, how <strong>quickly</strong> can you defeat the dragon?
                                 </p>
                             </div>
                         </div>
@@ -80,26 +80,38 @@
             </div>
     </div>
     <div class="game-area text-center p-5">
+        <div class="modal fade" id="nextModal" tabindex="-1" aria-labelledby="nextLevelModal" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Well Done!</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>You defeated the dragon and earned your belt!</p>
+                    </div>
+                </div>
+            </div>
+        </div> 
         <div class="game-area game-header row">
             <div class="col-2 correct-container"><i class="fas fa-check"></i> <span id="correct">0</span></div>
             <div class="col-8">
                 <div class="row">
-                    <div class="col"><span class="en">Defeat the baddy to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
+                    <div class="col"><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r dihiryn i gyflawni eich Gwregys </span><span id="current-belt">Blank</span><span class="en"> Belt</span></div>
                 </div>
             </div>
             <div class="col-2 incorrect-container"><i class="fas fa-times"></i> <span id="incorrect">0</span></div>
         </div>
         <div class="question-area col-6"></div>
-            <div id="correct"></div><div id="incorrect"></div>
             <span id="operand1">0</span>
             <span id="operator">x</span>
             <span id="operand2">0</span>
             <span>=</span>
-            <input id="answer-box" type="number">
+            <input class="col-2" id="answer-box" type="number">
             <button id="btn-submit" class="btn btn-primary mx-auto"><span class="cy">Danfon</span><span class="en">Submit</span></button>
         </div>
         <div class="game-area fight-scene row p-5">
-            <div class="ninja col-md-3 col-5">
+            <div class="ninja col-md-3 col-4">
                 <div class="row progress">
                     <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
@@ -107,15 +119,16 @@
                     <img id="ninja-img" src="assets/images/ninja0.png">
                 </div>
             </div>
-            <div class="col-md-6 col-2 fight-container my-auto">
+            <div class="col-md-6 col-4 fight-container my-auto">
                 <img id="ninja-star" src="assets/images/ninja-star.png">
+                <img id="fire-ball" src="assets/images/fire-ball.png">
             </div>
-            <div class="baddy col-md-3 col-5">
+            <div class="dragon col-md-3 col-4">
                 <div class="row progress">
-                    <div id="baddy-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <div class="row">
-                    <img id="baddy-img" src="assets/images/baddy.jpg">
+                    <img id="dragon-img" src="assets/images/dragon.png">
                 </div>
             </div>
         </div>
