--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <div class="row">
-                    <img id="dragon-img" src="assets/images/dragon.png">
+                    <img id="dragon-img" src="assets/images/dragon0.png">
                 </div>
             </div>
         </div>
