--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     <i class='fas fa-sign-out-alt'></i>
                 </button>
             </div>
-            <div class="col-1">
-                <button id="btn-sound" type="button" class="btn btn-header float-start">
-                    <i class="fas fa-volume-mute"></i></i>
-                </button>
+            <div class="col-1 text-center">
+                <input type="checkbox" id="btn-sound">
+                <label class="my-auto" id="btn-sound-label" for="btn-sound"><i class="fas fa-volume-mute"></i></label>
+                
             </div>
         </div>
         <div class="game-intro">
