fixed progress bars with padding and changed if else

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
             </div>
             <div class="game-area fight-scene row p-5">
                 <div class="ninja col-md-3 col-4">
-                    <div class="row progress">
-                        <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="row p-0 progress">
+                        <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success p-0" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="row">
                         <img id="ninja-img" src="assets/images/ninja0.png">
@@ -207,7 +207,7 @@
                 </div>
                 <div class="dragon col-md-3 col-4">
                     <div class="row progress">
-                        <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success p-0" role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <div class="row">
                         <img id="dragon-img" src="assets/images/dragon0.png">
