fix btn end from black belt modal

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <img class="ninja-win-modal" src="assets/images/ninja10.png">
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-primary mx-auto btn-end" type="button" data-bs-dismiss="modal" aria-label="Close"><span class="cy">Cartref</span><span class="en">Home</span></button>
+                            <button id="btn-end" class="btn btn-primary mx-auto" type="button" data-bs-dismiss="modal" aria-label="Close"><span class="cy">Cartref</span><span class="en">Home</span></button>
                         </div>
                     </div>
                 </div>
