stop submit if input is empty. Remove arrows on input

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <span id="operator">x</span>
                 <span id="operand2">0</span>
                 <span>=</span>
-                <input class="col-2" id="answer-box" type="number">
+                <input class="col-2" id="answer-box" type="number" autofocus required>
                 <button id="btn-submit" class="btn btn-primary mx-auto"><span class="cy">Danfon</span><span class="en">Submit</span></button>
             </div>
             <div class="game-area fight-scene row p-5">
