remove movement on button hover by adding transparent borders

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <i class='fas fa-home'></i>
                 </button>
                 <input type="checkbox" id="btn-sound" checked>
-                <label class="my-auto text-center" id="btn-sound-label" for="btn-sound"><i class="fas fa-volume-up"></i></label>
+                <label class="my-auto text-center align-middle" id="btn-sound-label" for="btn-sound"><i class="fas fa-volume-up"></i></label>
                 
             </div>
         </div>
