--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <button type="button" class="btn btn-header" id="btn-home">
                     <i class='fas fa-home'></i>
                 </button>
-                <input type="checkbox" id="btn-sound" checked>
+                <input type="checkbox" id="btn-sound" class="btn" checked>
                 <label class="my-auto text-center align-middle" id="btn-sound-label" for="btn-sound"><i class="fas fa-volume-up"></i></label>
             </div>
         </div>
