--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="node_modules/intro.js/introjs.css" type="text/css">
     <title>Negative Ninjas</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"
         defer></script>
     <script src="assets/js/script.js" defer></script>
+    <script src="node_modules/intro.js/intro.js" defer></script>
 </head>
 
 <body>
     <div class="header row mx-2 my-5">
         <div class="col-2 p-0 text-center my-auto">
-            <button id="btn-lang" type="button" class="btn btn-primary btn-header"><i
+            <button id="btn-lang" type="button" class="btn btn-primary btn-header" data-intro="Change between Welsh and English here" data-step="1"><i
                     class="fas fa-language"></i></button>
 
-            <button id="btn-help" type="button" class="btn btn-header" data-bs-toggle="modal"
-                data-bs-target="#helpModal">
+            <button id="btn-help" type="button" class="btn btn-header">
                 <i class="fas fa-question"></i>
             </button>
         </div>
@@ -37,10 +38,10 @@
                     Ninjas</span></h1>
         </div>
         <div class="col-2 p-0 text-center my-auto">
-            <button type="button" class="btn btn-header" id="btn-home">
+            <button type="button" class="btn btn-header" id="btn-home" data-intro="Return to home screen and choose your level" data-step="3">
                 <i class='fas fa-home'></i>
             </button>
-            <input type="checkbox" id="btn-sound" class="btn" checked>
+            <input type="checkbox" id="btn-sound" class="btn" checked data-intro="Toggle sound on and off here" data-step="2">
             <label class="my-auto text-center align-middle" id="btn-sound-label" for="btn-sound"><i
                     class="fas fa-volume-up"></i></label>
         </div>
@@ -95,7 +96,7 @@
     </div>
     <div class="game-area text-center my-2">
         <div class="game-area game-header row">
-            <div class="col-2 correct-container"><i class="fas fa-check"></i> <span id="correct">0</span></div>
+            <div class="col-2 correct-container"><i class="fas fa-check" data-intro="View how many correct answers you have made" data-step="4"></i> <span id="correct">0</span></div>
             <div class="col-8">
                 <div class="row">
                     <h2><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r dihiryn
@@ -103,18 +104,18 @@
                             class="en"><span id="current-belt">Blank</span> belt</span></h2>
                 </div>
             </div>
-            <div class="col-2 incorrect-container"><i class="fas fa-times"></i> <span id="incorrect">0</span></div>
+            <div class="col-2 incorrect-container"><i class="fas fa-times" data-intro="View how many incorrect answers you have made" data-step="5"></i> <span id="incorrect">0</span></div>
         </div>
         <div class="question-area container my-auto">
             <span class="col-2 display-4" id="operand1">0</span>
             <span class="col-2 display-4" id="operator">x</span>
             <span class="col-2 display-4" id="operand2">0</span>
             <span class="col-2 display-4">=</span>
-            <input class="col-2 display-4" id="answer-box" type="number" autofocus required>
+            <input class="col-2 display-4" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
             <button id="btn-submit" class="btn btn-primary display-4"><i class="fas fa-arrow-right"></i></button>
         </div>
         <div class="game-area fight-scene row mx-2 my-5">
-            <div class="ninja col-md-3 col-4">
+            <div class="ninja col-md-3 col-4" data-intro="Answer a question correctly and you will throw a ninja star at the dragon. Keep answering questions correctly to win" data-step="6">
                 <div class="row p-0 progress">
                     <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success p-0"
                         role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0"
@@ -136,62 +137,6 @@
                 </div>
                 <div class="row">
                     <img id="dragon-img" src="assets/images/dragon0.png">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Help Modal -->
-    <div class="modal fade" id="helpModal" tabindex="-1" aria-labelledby="helpModalLabel"
-                        aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"><span class="cy">Sut i
-                            Chwarae</span><span class="en">How to Play</span></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                </div>
-                <div class="modal-body text-center">
-                    <span class="cy">
-                        <p>Pa mor gyflym allwch chi drechu'r ddraig a symud ymlaen i'r gwregys nesaf?</p>
-                        <p>Mae atebion cywir yn tynnu 1 pwynt iechyd oddi ar y ddraig.
-                            <br>Mae atebion anghywir yn tynnu 1 pwynt iechyd oddi ar ninja.</p>
-                        <p>
-                            <ul>
-                                <li>Gwyn: x2, x10</li>
-                                <li>Melyn: /2, /10</li>
-                                <li>Oren: x2, /2, x10, /10</li>
-                                <li>Green: x2, x4, x5, x10</li>
-                                <li>Purple: /2, /4, /5, /10</li>
-                                <li>Glas: x2, /2, x4, /4, x5, /5, x10, /10</li>
-                                <li>Brown: x ALL</li>
-                                <li>Coch: / ALL</li>
-                                <li>Du: x/ ALL</li>
-                            </ul>
-
-                            Fedrwch chi ennill gwregys du?
-                        </p>
-                    </span>
-                    <span class="en">
-                        <p>How quickly can you defeat the dragon and progress to the next belt?</p>
-                        <p>Correct answers knock 1 health point off the dragon
-                            <br>Incorrect answers knocks 1 health point off ninja</p>
-                        <p>
-                            <ul>
-                                <li>White: x2, x10</li>
-                                <li>Yellow: /2, /10</li>
-                                <li>Orange: x2, /2, x10, /10</li>
-                                <li>Green: x2, x4, x5, x10</li>
-                                <li>Purple: /2, /4, /5, /10</li>
-                                <li>Blue: x2, /2, x4, /4, x5, /5, x10, /10</li>
-                                <li>Brown: x ALL</li>
-                                <li>Red: / ALL</li>
-                                <li>Black: x/ ALL</li>
-                            </ul>
-
-                            Can you reach black belt?
-                        </p>
-                    </span>
                 </div>
             </div>
         </div>
