--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <div class="header row mx-2 my-5">
+    <div class="header row mx-2 my-3">
         <div class="col-2 p-0 text-center my-auto">
             <button id="btn-lang" type="button" class="btn btn-primary btn-header" data-intro="Change between Welsh and English here" data-step="1"><i
                     class="fas fa-language"></i></button>
@@ -47,44 +47,8 @@
         </div>
     </div>
     <div class="game-intro container">
-        <h2 class="text-center"><span class="cy">
-                Dewiswch eich lefel i ennill eich gwregys:</span><span class="en">Choose your level to earn your
-                belt:</span>
-        </h2>
-        <div class="game-settings row">
-            <div class="btn-group col-10 mx-auto flex-wrap" role="group"
-                aria-label="Basic radio toggle button group">
-                <button type="button" class="btn btn--white btn-start" data-value="0" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x 2,5"><span class="cy">Gwyn</span><span
-                        class="en">White</span></button>
-                <button type="button" class="btn btn--yellow btn-start" data-value="1" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="&divide 2,5"><span class="cy">Melyn</span><span
-                        class="en">Yellow</span></button>
-                <button type="button" class="btn btn--orange btn-start" data-value="2" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x/&divide 2,5"><span class="cy">Oren</span><span
-                        class="en">Orange</span></button>
-                <button type="button" class="btn btn--green btn-start" data-value="3" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x 2,4,5,10"><span class="cy">Gwyrdd</span><span
-                        class="en">Green</span></button>
-                <button type="button" class="btn btn--purple btn-start" data-value="4" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="&divide 2,4,5,10"><span class="cy">Piws</span><span
-                        class="en">Purple</span></button>
-                <button type="button" class="btn btn--blue btn-start" data-value="5" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x/&divide 2,4,5,10"><span class="cy">Glas</span><span
-                        class="en">Blue</span></button>
-                <button type="button" class="btn btn--brown btn-start" data-value="6" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x ALL"><span class="cy">Brown</span><span
-                        class="en">Brown</span></button>
-                <button type="button" class="btn btn--red btn-start" data-value="7" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="&divide ALL"><span class="cy">Coch</span><span
-                        class="en">Red</span></button>
-                <button type="button" class="btn btn--black btn-start" data-value="8" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="x/&divide ALL"><span class="cy">Du</span><span
-                        class="en">Black</span></button>
-            </div>
-        </div>
-        <div class="home-info text-center smaller col-10 mx-auto my-5 p-2">
-            <span class="cy">
+        <div class="home-info text-center smaller col-10 mx-auto p-2">
+            <span class="cy lead">
                 <p>Atebwch cwestiynau tablau lluosi sy'n cynnwys rhifau negyddol i drechu'r ddreigiau.
                     <br><strong>Gallwch chi ennill y teitl Ninja Negyddol Gwregys Du?</strong></p>
             </span>
@@ -93,18 +57,64 @@
                     <br><strong>Can you become a black belt negative ninja?</strong></p>
             </span>
         </div>
+        <h2 class="text-center"><span class="cy">
+                Dewiswch eich lefel i ennill eich gwregys:</span><span class="en">Choose your level to earn your
+                belt:</span>
+        </h2>
+        <div class="game-settings row">
+            <div class="row mx-auto">
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="0" checked>
+                    <img class="belt-image" src="assets/images/white.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="1">
+                    <img class="belt-image" src="assets/images/yellow.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="2">
+                    <img class="belt-image" src="assets/images/orange.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="3">
+                    <img class="belt-image" src="assets/images/green.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="4">
+                    <img class="belt-image" src="assets/images/purple.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="5">
+                    <img class="belt-image" src="assets/images/blue.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="6">
+                    <img class="belt-image" src="assets/images/brown.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="7">
+                    <img class="belt-image" src="assets/images/red.png">
+                </label>
+                <label class="col-4 text-center">
+                    <input type="radio" name="level" value="8">
+                    <img class="belt-image" src="assets/images/black.png">
+                </label>
+            </div>
+            <div class="row">
+                <button type="button" class="btn btn--black btn-start col-3 mx-auto m-2"><span class="cy">Chwarae</span><span
+                    class="en">Play</span></button>
+            </div>
+        </div>
     </div>
     <div class="game-area text-center my-2">
         <div class="game-area game-header row">
-            <div class="col-2 correct-container"><i class="fas fa-check" data-intro="View how many correct answers you have made" data-step="4"></i> <span id="correct">0</span></div>
-            <div class="col-8">
+            <div class="col">
                 <div class="row">
                     <h2><span class="en">Defeat the dragon to achieve your </span><span class="cy">Trechu'r dihiryn
                             i gyflawni eich gwregys <span id="gwregys-presennol">Blank</span></span><span
                             class="en"><span id="current-belt">Blank</span> belt</span></h2>
                 </div>
             </div>
-            <div class="col-2 incorrect-container"><i class="fas fa-times" data-intro="View how many incorrect answers you have made" data-step="5"></i> <span id="incorrect">0</span></div>
         </div>
         <div class="question-area container my-auto">
             <span class="col-2 display-4" id="operand1">0</span>
@@ -114,30 +124,38 @@
             <input class="col-2 display-4" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
             <button id="btn-submit" class="btn btn-primary display-4"><i class="fas fa-arrow-right"></i></button>
         </div>
-        <div class="game-area fight-scene row mx-2 my-5">
-            <div class="ninja col-md-3 col-4" data-intro="Answer a question correctly and you will throw a ninja star at the dragon. Keep answering questions correctly to win" data-step="6">
-                <div class="row p-0 progress">
-                    <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success p-0"
-                        role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0"
-                        aria-valuemax="100"></div>
+        <div class="game-area fight-scene container mx-2 my-5">
+            <div class="row">
+                <div class="ninja col-md-3 col-4" data-intro="Answer a question correctly and you will throw a ninja star at the dragon. Keep answering questions correctly to win" data-step="6">
+                    <div class="row p-0 progress">
+                        <div id="ninja-progress" class="progress-bar progress-bar-striped bg-success p-0"
+                            role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                    </div>
+                    <div class="row">
+                        <img id="ninja-img" src="assets/images/ninja0.png">
+                    </div>
                 </div>
-                <div class="row">
-                    <img id="ninja-img" src="assets/images/ninja0.png">
+                <div class="col-md-6 col-4 fight-container my-auto">
+                    <img id="ninja-star" src="assets/images/ninja-star.png">
+                    <img id="fire-ball" src="assets/images/fire-ball.png">
+                </div>
+                <div class="dragon col-md-3 col-4">
+                    <div class="row progress">
+                        <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success p-0"
+                            role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100"></div>
+                    </div>
+                    <div class="row">
+                        <img id="dragon-img" src="assets/images/dragon0.png">
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6 col-4 fight-container my-auto">
-                <img id="ninja-star" src="assets/images/ninja-star.png">
-                <img id="fire-ball" src="assets/images/fire-ball.png">
-            </div>
-            <div class="dragon col-md-3 col-4">
-                <div class="row progress">
-                    <div id="dragon-progress" class="progress-bar progress-bar-striped bg-success p-0"
-                        role="progressbar" style="width: 100%" aria-valuenow="75" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                </div>
-                <div class="row">
-                    <img id="dragon-img" src="assets/images/dragon0.png">
-                </div>
+            <div class="fight-scene scores row">
+                <p class="lead">Score:
+                    <i class="fas fa-check" data-intro="View how many correct answers you have made" data-step="4"></i> <span id="correct">0</span>
+                    <i class="fas fa-times" data-intro="View how many incorrect answers you have made" data-step="5"></i> <span id="incorrect">0</span>
+                </p>
             </div>
         </div>
     </div>
