--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                 </div>
             </div>
             <div class="question-area container my-auto">
-                <span class="col-2 display-4" id="operand1">0</span>
-                <span class="col-2 display-4" id="operator">x</span>
-                <span class="col-2 display-4" id="operand2">0</span>
-                <span class="col-2 display-4">=</span>
-                <input class="col-2 display-4" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
-                <button id="btn-submit" class="btn display-4"><i class="fas fa-arrow-right"></i></button>
+                <span class="display-4" id="operand1">0</span>
+                <span class="display-4" id="operator">x</span>
+                <span class="display-4" id="operand2">0</span>
+                <span class="display-4">=</span>
+                <input class="display-4 w-25" id="answer-box" type="number" autofocus required data-intro="Submit your answer here" data-step="2">
+                <button id="btn-submit" class="btn display-4 my-auto m-2"><i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="game-area container">
                 <div class="row fight-scene">
